<resources>
    <string name="app_name">TaxiFirebaseApp</string>
    <string name="im_a_passenger_button">Im a passenger</string>
    <string name="im_a_driver_button">Im a driver</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up_button_text">Sigh up</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="tap_to_log_in_textview">Tap to log in</string>
    <string name="choose_login_mode_label">Choose login mode</string>
    <string name="log_in_text">Log in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="or_log_in_text">Or, log in</string>
    <string name="or_sign_up_text">Or, sign up</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="settings_button_text">Settings</string>
    <string name="sign_out_button">Sign out</string>
</resources>